--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.4.1",
+    "axios": "^0.13.1",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.22.1",
     "body-parser": "^1.15.2",
